--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
       "backgroundColor": "#ffffff"
     },
 
-    "icon": "./assets/icon.png"
+    "icon": "./assets/icon.png",
+    "orientation": "portrait"
   }
 }
