--- a/package.json
+++ b/package.json
@@ -3,35 +3,50 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "^48.0.7",
     "expo-asset": "~8.9.1",
+    "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
+    "net": "^1.0.2",
+    "patch-package": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-overlay": "^0.1.2",
+    "react-native-image-picker": "^5.4.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "styled-components": "^6.0.0-rc.1"
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.18.10",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
